Add `XsdToSchema` for XSD-to-OpenAPI Schema conversion and integrate into `OpenApiGenerator`.